--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,38 @@
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-    <nav class="site-nav">
-      <div class="trigger">
-        <a class="page-link" href="{{ '/getting-started/' | prepend: site.baseurl }}">Getting Started</a>
-      </div>
-    </nav>
 
   </div>
 
+
+
+ <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <img src="/images/a127-logo.svg">
+          </a>
+        </div>
+        <div class="trigger">
+        <a class="page-link" href="{{ '/getting-started/' | prepend: site.baseurl }}">Getting Started</a>
+      </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" role="form">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
 </header>
