add nav links, placeholder for video

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,9 +18,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+ <a class="navbar-brand" href="{{site.baseurl}}">
             <img src="/images/a127-logo.svg">
           </a>
+          <ul class="nav navbar-nav">
+            <li><a href="#">Getting Started</a></li>
+            <li><a href="#">Adding OAuth 2.0</a></li>
+            <li><a href="#">About Apigee 127</a></li>
+                      </ul>
+
         </div>
         <div class="trigger">
         <a class="page-link" href="{{ '/getting-started/' | prepend: site.baseurl }}">Getting Started</a>
