--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="{{site.baseurl}}">
-          <img src="/images/a127-logo.svg">
+          <img src="images/a127-logo.svg">
         </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
