Add home page content structure

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -1,3 +1,12 @@
 .big-hero {
     margin-bottom: 0;
 }
+.home-row {
+  padding: 40px 0;
+}
+
+.main-footer {
+  min-height: 300px;
+  background: #DBDBDB;
+  padding: 40px 0;
+}
